syntax = "proto3";

package data;

option go_package = "github.com/goxiaoy/go-saas-kit/pkg/data;data";

message Address{
  //Country or region
  string country=1;
  //State or province
  string state=2;
  string city=3;
  string zip_code=4;
  string line1=5;
  string line2=6;
  string line3=7;
  string longitude=8;
  string latitude=9;
}
